# agents-stocks-psx

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: scraper_agent.py
config/prompts/v1/: analyst_agent.yaml  data_agent.yaml  research_agent.yaml  supervisor.yaml  synthesis.yaml
data/migrations/: 001_initial_schema.sql
docs/: AGENT_LAYER.md  DATA_LAYER.md
evaluation/: __init__.py  run_evals.py
evaluation/datasets/: golden_set.json
evaluation/evals/: __init__.py  analyst_agent_eval.py  base.py  data_agent_eval.py  pdf_parser_eval.py  research_agent_eval.py  scraper_eval.py
evaluation/metrics/: __init__.py  accuracy.py  cost.py
evaluation/results/: .gitkeep  latest.json
src/psx/: __init__.py
src/psx/agents/: __init__.py  analyst_agent.py  base.py  data_agent.py  llm.py  research_agent.py  schemas.py  supervisor.py
src/psx/cli/: main.py
src/psx/core/: __init__.py  config.py  constants.py  exceptions.py  models.py  prompts.py
src/psx/observability/: __init__.py  cost.py  metrics.py
src/psx/scraper/: __init__.py  psx_scraper.py  selectors.py
src/psx/storage/: __init__.py  data_store.py  database.py
src/psx/tools/: __init__.py  calculator.py  pdf_parser.py  web_search.py
src/psx/utils/: __init__.py  parsers.py  retry.py
tests/: __init__.py  test_agents.py  test_calculator.py  test_config.py  test_data_store.py  test_database.py  test_llm.py  test_models.py  test_parsers.py  test_pdf_parser.py  test_schemas.py  test_scraper.py  test_web_search.py
