[project]
name = "stocks-psx"
version = "0.1.0"
description = "Multi-agent framework for fundamental analysis and stock valuation on Pakistan Stock Exchange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.57.0",
    "httpx>=0.25.0",
    "pypdf>=3.0.0",
    "pdfplumber>=0.11.8",
    "python-dotenv>=1.2.1",
]

# Optional dependency groups - install with: pip install .[dev] or pip install .[vector]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]
agents = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tavily-python>=0.3.0",
]

# CLI entry points - creates executable commands after installation
# Format: command-name = "module.path:function"
# After "pip install -e ." you can run "psx scrape OGDC" instead of "python src/psx/cli/main.py scrape OGDC"
[project.scripts]
psx = "psx.cli.main:main"

# Build system config - hatchling is the build backend (alternatives: setuptools, flit, poetry)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tells hatch where to find the package source code (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/psx"]

# Pytest configuration - run tests with: pytest or uv run pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

# UV-specific dependency groups (PEP 735) - install with: uv sync --group dev
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
